Button alignment, search button, renderer fixes
Introduce configurable text/icon alignment for ShButton: new enums in Buttonable, getters/setters in ShButton, and BeanInfo descriptions; multiline text now respects horizontal alignment. Add ShDateSelector.getDateString() returning ISO yyyy-MM-dd. Add search-button support to ShTable and TableSearchDelegate (visibility, text, action, enabled forwarding and visibility refresh). Simplify BasicRenderer alignment behavior; tighten ModelRender (validation, non-null background, deprecated legacy accessors); improve StatusCellRenderer rule handling (row vs cell, immutable renders list). Add tests for button text layout, date string, and status renderer.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>